--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Greenstand
+title: Greenstand Test Project
 description: Treetracker - Addressing Poverty and Climate Change through transparency in tree growing efforts
 theme: just-the-docs
 
